rustdocs/errors/rust-bitcoin-bitcoin-src-sign_message.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `consensus`
  --> ../rust-bitcoin/bitcoin/src/sign_message.rs:12:12
   |
12 | use crate::consensus::encode::WriteExt;
   |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
   |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
   |
 8 + extern crate consensus;
   |

error[E0432]: unresolved import `hashes`
 --> ../rust-bitcoin/bitcoin/src/sign_message.rs:8:5
  |
8 | use hashes::{sha256d, HashEngine};
  |     ^^^^^^ use of unresolved module or unlinked crate `hashes`
  |
help: you might be missing a crate named `hashes`, add it to your project and import it in your code
  |
8 + extern crate hashes;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
